# poco

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG  CMakeLists.diff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  DLLVersion.rc  DNSSD.progen  DNSSD_WEC2013_vs120.vcxproj.filters  DNSSD_vs100.sln  DNSSD_vs100.vcxproj.filters  DNSSD_vs140.vcxproj.filters  DNSSD_vs90.vcproj  DNSSD_x64_vs100.sln  DNSSD_x64_vs100.vcxproj.filters  DNSSD_x64_vs110.sln  DNSSD_x64_vs120.vcxproj.filters  DNSSD_x64_vs140.vcxproj  DNSSD_x64_vs140.vcxproj.filters  FAQ.md  Jenkinsfile-Native  MANIFEST  Makefile  NEWS  PocoCppUnit.pc.in  PocoCrypto.pc.in  PocoEncodings.pc.in  PocoFoundation.pc.in  PocoJSON.pc.in  PocoModulesTargets_installed.cmake  PocoMongoDB.pc.in  PocoNet.pc.in  PocoNetSSL.pc.in  (+69 more)
ActiveRecord/: ActiveRecord.progen  ActiveRecord_vs140.sln  ActiveRecord_vs140.vcxproj  ActiveRecord_vs140.vcxproj.filters  ActiveRecord_vs150.sln  ActiveRecord_vs150.vcxproj  ActiveRecord_vs150.vcxproj.filters  ActiveRecord_vs160.sln  ActiveRecord_vs160.vcxproj  ActiveRecord_vs160.vcxproj.filters  ActiveRecord_vs170.sln  ActiveRecord_vs170.vcxproj  ActiveRecord_vs170.vcxproj.filters  ActiveRecord_vs90.sln  ActiveRecord_vs90.vcproj  CMakeLists.txt  Makefile  dependencies
ApacheConnector/: ApacheConnector.progen  ApacheConnector_VS71.sln  ApacheConnector_VS71.vcproj  ApacheConnector_VS80.sln  ApacheConnector_VS80.vcproj  ApacheConnector_VS90.sln  ApacheConnector_VS90.vcproj  ApacheConnector_vs100.sln  ApacheConnector_vs100.vcxproj  ApacheConnector_vs100.vcxproj.filters  ApacheConnector_vs110.sln  ApacheConnector_vs110.vcxproj  ApacheConnector_vs110.vcxproj.filters  ApacheConnector_vs120.sln  ApacheConnector_vs120.vcxproj  ApacheConnector_vs120.vcxproj.filters  ApacheConnector_vs140.sln  ApacheConnector_vs140.vcxproj  ApacheConnector_vs140.vcxproj.filters  ApacheConnector_vs150.sln  ApacheConnector_vs150.vcxproj  ApacheConnector_vs150.vcxproj.filters  ApacheConnector_vs160.sln  ApacheConnector_vs160.vcxproj  ApacheConnector_vs160.vcxproj.filters  ApacheConnector_vs170.sln  ApacheConnector_vs170.vcxproj  ApacheConnector_vs170.vcxproj.filters  ApacheConnector_vs90.sln  ApacheConnector_vs90.vcproj  ApacheConnector_x64_vs100.sln  ApacheConnector_x64_vs100.vcxproj  ApacheConnector_x64_vs100.vcxproj.filters  ApacheConnector_x64_vs110.sln  ApacheConnector_x64_vs110.vcxproj  ApacheConnector_x64_vs110.vcxproj.filters  ApacheConnector_x64_vs120.sln  ApacheConnector_x64_vs120.vcxproj  ApacheConnector_x64_vs120.vcxproj.filters  ApacheConnector_x64_vs140.sln  (+10 more)
Benchmark/: CMakeLists.txt  LOGGER_BENCHMARK.md  Makefile  README.md  compare.ps1  compare.sh
CppParser/: CMakeLists.txt  CppParser.progen  CppParser_CE_vs90.sln  CppParser_CE_vs90.vcproj  CppParser_vs100.sln  CppParser_vs100.vcxproj  CppParser_vs100.vcxproj.filters  CppParser_vs110.sln  CppParser_vs110.vcxproj  CppParser_vs110.vcxproj.filters  CppParser_vs120.sln  CppParser_vs120.vcxproj  CppParser_vs120.vcxproj.filters  CppParser_vs140.sln  CppParser_vs140.vcxproj  CppParser_vs140.vcxproj.filters  CppParser_vs150.sln  CppParser_vs150.vcxproj  CppParser_vs150.vcxproj.filters  CppParser_vs160.sln  CppParser_vs160.vcxproj  CppParser_vs160.vcxproj.filters  CppParser_vs170.sln  CppParser_vs170.vcxproj  CppParser_vs170.vcxproj.filters  CppParser_vs71.sln  CppParser_vs71.vcproj  CppParser_vs80.sln  CppParser_vs80.vcproj  CppParser_vs90.sln  CppParser_vs90.vcproj  CppParser_x64_vs100.sln  CppParser_x64_vs100.vcxproj  CppParser_x64_vs100.vcxproj.filters  CppParser_x64_vs110.sln  CppParser_x64_vs110.vcxproj  CppParser_x64_vs110.vcxproj.filters  CppParser_x64_vs120.sln  CppParser_x64_vs120.vcxproj  CppParser_x64_vs120.vcxproj.filters  (+12 more)
CppUnit/: .cdtproject  .project  CMakeLists.txt  CppUnit.progen  CppUnit_CE_vs90.sln  CppUnit_CE_vs90.vcproj  CppUnit_WEC2013_vs110.sln  CppUnit_WEC2013_vs110.vcxproj  CppUnit_WEC2013_vs110.vcxproj.filters  CppUnit_WEC2013_vs120.sln  CppUnit_WEC2013_vs120.vcxproj  CppUnit_WEC2013_vs120.vcxproj.filters  CppUnit_vs100.sln  CppUnit_vs100.vcxproj  CppUnit_vs100.vcxproj.filters  CppUnit_vs110.sln  CppUnit_vs110.vcxproj  CppUnit_vs110.vcxproj.filters  CppUnit_vs120.sln  CppUnit_vs120.vcxproj  CppUnit_vs120.vcxproj.filters  CppUnit_vs140.sln  CppUnit_vs140.vcxproj  CppUnit_vs140.vcxproj.filters  CppUnit_vs150.sln  CppUnit_vs150.vcxproj  CppUnit_vs150.vcxproj.filters  CppUnit_vs160.sln  CppUnit_vs160.vcxproj  CppUnit_vs160.vcxproj.filters  CppUnit_vs170.sln  CppUnit_vs170.vcxproj  CppUnit_vs170.vcxproj.filters  CppUnit_vs71.sln  CppUnit_vs71.vcproj  CppUnit_vs80.sln  CppUnit_vs80.vcproj  CppUnit_vs90.sln  CppUnit_vs90.vcproj  CppUnit_x64_vs100.sln  (+20 more)
Crypto/: CMakeLists.txt  Crypto.progen  Crypto_CE_VS90.sln  Crypto_CE_VS90.vcproj  Crypto_VS71.sln  Crypto_VS71.vcproj  Crypto_VS80.sln  Crypto_VS80.vcproj  Crypto_VS90.sln  Crypto_VS90.vcproj  Crypto_WEC2013_vs110.vcxproj  Crypto_WEC2013_vs110.vcxproj.filters  Crypto_WEC2013_vs120.vcxproj  Crypto_WEC2013_vs120.vcxproj.filters  Crypto_vs100.sln  Crypto_vs100.vcxproj  Crypto_vs100.vcxproj.filters  Crypto_vs110.vcxproj  Crypto_vs110.vcxproj.filters  Crypto_vs120.sln  Crypto_vs120.vcxproj  Crypto_vs120.vcxproj.filters  Crypto_vs140.sln  Crypto_vs140.vcxproj  Crypto_vs140.vcxproj.filters  Crypto_vs150.sln  Crypto_vs150.vcxproj  Crypto_vs150.vcxproj.filters  Crypto_vs160.sln  Crypto_vs160.vcxproj  Crypto_vs160.vcxproj.filters  Crypto_vs170.sln  Crypto_vs170.vcxproj  Crypto_vs170.vcxproj.filters  Crypto_x64_vs100.vcxproj  Crypto_x64_vs100.vcxproj.filters  Crypto_x64_vs110.sln  Crypto_x64_vs110.vcxproj  Crypto_x64_vs110.vcxproj.filters  Crypto_x64_vs120.sln  (+14 more)
DNSSD/: CMakeLists.txt  DNSSD_CE_vs90.sln  DNSSD_CE_vs90.vcproj  DNSSD_WEC2013_vs120.sln  DNSSD_WEC2013_vs120.vcxproj  DNSSD_vs100.vcxproj  DNSSD_vs110.sln  DNSSD_vs110.vcxproj  DNSSD_vs110.vcxproj.filters  DNSSD_vs120.sln  DNSSD_vs120.vcxproj  DNSSD_vs120.vcxproj.filters  DNSSD_vs140.sln  DNSSD_vs140.vcxproj  DNSSD_vs160.sln  DNSSD_vs160.vcxproj  DNSSD_vs170.sln  Makefile  (+12 more)
(+11898 files in other folders)
